Use Mojang piston-meta manifest with offline JSON cache
Switch the remote version list off the operator's mirror onto Mojang's
modern endpoint and persist every JSON we touch so the launcher keeps
working when the network or the mirror is down.

URL_MOJANG_VERSION_MANIFEST is the manifest URL
(https://piston-meta.mojang.com/mc/game/version_manifest_v2.json).
The new MojangVersionManifest POJO mirrors the JSON shape (latest map +
versions array of {id, type, url, time, releaseTime, sha1,
complianceLevel}); only id and url actually drive the wiring, the rest
are accepted-and-ignored.

RemoteVersionList:
- refreshVersions() fetches the manifest, caches it under
  <workingDir>/cache/version_manifest_v2.json, parses it into an
  id -> per-version-URL map, then defers to super.refreshVersions()
  which re-parses the same body into the existing PartialVersion
  list (the older RawVersionList shape is a structural subset, so
  Gson populates id/type/time/releaseTime and ignores the extras).
- getContent(path):
    * "versions/versions.json"          -> cached manifest body
    * "versions/<id>/<id>.json"         -> Mojang per-version URL,
      response written to <workingDir>/versions/<id>/<id>.json so
      LocalVersionList picks it up on subsequent runs
    * anything else                     -> legacy mirror fallback
- Network failures on either endpoint fall back to the cached file
  on disk; LocalVersionList already reads from the same path so a
  fully-offline start works for any version that's been seen online
  at least once.
- Asset indexes still hit the legacy URL_DOWNLOAD_INDEXES_BASE; the
  modern hash-addressed Mojang asset index would need
  CompleteVersion to expose assetIndex.url (a separate refactor).

Drive-by:
- Replace the three deprecated `new Integer(3)` calls in
  LauncherPanel.topWrapper.add(...) with Integer.valueOf(3) per the
  Java 9+ removal warning.

Build:
- Add JUnit 4.13.2 (test scope) and a small test pair:
  RemoteVersionListTest exercises